19990917-03:15 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/rtl/transfrm.c
    * WORD -> USHORT
  * include/errorapi.h
    source/rtl/errorapi.c
    source/rtl/copyfile.c
    source/rtl/filesys.c
    source/rtl/memvars.c
    source/rtl/set.c
    source/runner/runlib.c
    source/rdd/dbcmd.c
    * Changed WORD to USHORT in all Error handling stuff.
  * tests/working/rtl_test.prg
    * Version() -> Version( 0 ) (xBase++ likes the numeric value better here,
      but I could not test it)

19990917-03:15 GMT+1 Victor Szel <info@szelvesz.hu>

  * source/rtl/console.c (mainly)
    source/rtl/gtapi.c
    source/rtl/strings.c
    source/rtl/hardcr.c
    source/rtl/mtran.c
    + Changed some explicit constants to manifest constants (keyboard codes,
      character codes)
    % [f]printf( "%c", c ) -> fputc( c, std??? ) for speed.
    % [f]printf( "%s", s ) -> fputs( s, std??? ) for speed.
    % printf( constant ) -> fputs( constant, std??? ) for speed.
    ; Since I'm not sure whether fflush() is called from fput*() functions,
      it may be needed to place more explicit flush calls. This may have been 
      an issue already since printf() is only flushing on \n chars, at least
      in MINGW32.
    ! s_szAcceptResult is now initialized on startup as an empty string.
    ! One cast added to hb_retc()/SAVESCREEN().
  * include/inkey.h
    + NOTE that is's used from C, too.
  * include/hbdefs.h
    + HB_CHAR_ common character constants added.

19990916-19:35 EDT David G. Holm <dholm@jsd-llc.com>

  * doc/gmake.txt
    + Added gcc/mingw32.
    + Updated the BUILD.BAT paragraph.

  * source/rtl/console.c
    ! Added missing type override to hb_xgrab() call in SAVESCREEN().

  * source/rtl/dir.c
    ! Changed FA_READONLY to FA_RDONLY
    ! Changed FILE_RDONLY to FILE_READONLY

  * source/rtl/environ.c
    ! Added conditional definition of a Windows define
      that is missing from some versions of Borland C.
      Thanks to Jose Lalin.