@@ -1,3 +1,11 @@
+19990916-23:45 EDT Paul Tucker <ptucker@sympatico.ca>
+  * source/rtl/console.c
+  * source/rtl/gtapi.c
+    * added a number of casts
+      The problem with declaring something to acctype (BYTE*) is that then
+      the overly sensitive MSVC complains about passing a const * to it -
+      it becomes quite bothersome to use (IMO).
+
 19990917-03:15 GMT+1 Victor Szel <info@szelvesz.hu>
 
   * source/rtl/transfrm.c
